# LegoNanoBot

./: .gitignore  AGENTS.md  README.md  SUPERVISOR_BLUEPRINT.md  environment.yml  pyproject.toml
docs/supervisor/: README.md  deployment.md
examples/memory-plugin-sqlite/: README.md  pyproject.toml
examples/memory-plugin-sqlite/src/nanobot_plugin_memory_sqlite/: __init__.py  memory_factory.py
nanobot/agent/: context.py  loop.py  memory.py  subagent.py
nanobot/channels/: base.py  dingtalk.py  discord.py  manager.py  matrix.py  telegram.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/memory/: __init__.py  base.py  filesystem.py  memory_plugins.py  registry.py
nanobot/providers/: provider_plugins.py
nanobot/supervisor/: app.py  event_sink.py  models.py  registry.py  result_reporter.py  routing.py  (+1 more)
sbin/: nanobot-config.sh  nanobot-status.sh  restart-nanobot.sh  start-nanobot.sh  start-supervisor.sh  stop-nanobot.sh  stop-supervisor.sh
tests/: test_base_channel.py  test_channel_flat_config.py  test_commands.py  test_consolidate_offset.py  test_dingtalk_channel.py  test_matrix_channel.py  test_memory_plugins.py  test_provider_flat_config.py  test_provider_validation.py  test_supervisor_api.py  test_supervisor_integration.py  test_supervisor_models.py  test_supervisor_phase4.py  test_supervisor_registry.py  test_supervisor_result_reporter.py  test_supervisor_routing.py  test_task_cancel.py  test_worker_client.py  test_worker_runner.py  test_xray_api.py  test_xray_config.py  test_xray_events.py  test_xray_observer.py  test_xray_store.py
(+33 files in other folders)
