[project]
name = "nanobot-memory-sqlite-plugin"
version = "0.1.0"
description = "Example nanobot memory plugin backed by SQLite"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.1.4",
]

[project.entry-points."nanobot.memory_factories"]
sqlite-memory = "nanobot_plugin_memory_sqlite.memory_factory:create_memory_store"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_plugin_memory_sqlite"]
